Fix navbar buttons being clipped prematurely.

--- a/css/core.css
+++ b/css/core.css
@@ -2720,8 +2720,8 @@ body.zXrpABNQHpWKgSzqnGlL {
 
 /* WINDOW CONTROLS */
 ._39oUCO1OuizVPwcnnv88no .qP17eBPXkfezFfexZ4hC3 {
-  flex: 0 1 calc(48px * 3) !important;
-  min-width: calc(48px * 3) !important;
+  flex: 0 1 calc(var(--zehn-size-titlebar-width) * 3) !important;
+  min-width: calc(var(--zehn-size-titlebar-width) * 3) !important;
 }
 
 .title-bar-actions.window-controls {
@@ -2732,9 +2732,9 @@ body.zXrpABNQHpWKgSzqnGlL {
   padding: 0 !important;
   border-radius: var(--zehn-size-radius-none) !important;
   margin: 0 !important;
-  height: 32px !important;
-  min-height: 32px !important;
-  max-height: 32px !important;
+  height: 100% !important;
+  min-height: 100% !important;
+  max-height: 100% !important;
 }
 
 .DesktopUI .title-area-icon, .friendsui-container .title-area-icon {
@@ -2751,9 +2751,9 @@ body.zXrpABNQHpWKgSzqnGlL {
 
 .title-area-highlight {
   background: transparent !important;
-  height: 32px !important;
-  min-height: 32px !important;
-  max-height: 32px !important;
+  height: var(--zehn-size-titlebar-height) !important;
+  min-height: var(--zehn-size-titlebar-height) !important;
+  max-height: var(--zehn-size-titlebar-height) !important;
   display: none !important;
 }
 
