--- a/css/library.css
+++ b/css/library.css
@@ -222,6 +222,7 @@
 /* SPACER */
 ._30vB9DdsPK7VrZAbb5Q1Av {
   flex: 1 !important;
+  max-width: fit-content !important;
 }
 
 ._30vB9DdsPK7VrZAbb5Q1Av > div:not(:last-child) {
@@ -621,6 +622,7 @@ body:not(.WindowFocus) ._39oUCO1OuizVPwcnnv88no ._3s0lkohH8wU2do0K1il28Y {
 
 ._39oUCO1OuizVPwcnnv88no ._1-9sir4j_KQiMqdkZjQN0u, ._1-9sir4j_KQiMqdkZjQN0u {
   flex: 0 1 auto !important;
+  width: 100% !important;
   min-width: 0 !important;
   overflow: hidden !important;
   justify-content: flex-end !important;
