--- a/css/variables.css
+++ b/css/variables.css
@@ -1157,11 +1157,11 @@
 
   --zehn-size-radius-none: 0px;
 
-  --zehn-size-navbar-height: 32px;
-  --zehn-size-navbar-width: 48px;
-
   --zehn-size-titlebar-height: 32px;
   --zehn-size-titlebar-width: 48px;
+
+  --zehn-size-navbar-height: var(--zehn-size-titlebar-height);
+  --zehn-size-navbar-width: var(--zehn-size-titlebar-width);
 
   --zehn-size-urlbar-height: 48px;
   --zehn-size-urlbar-width: 48px;
